fixed some spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -376,7 +376,7 @@ input[type="submit"] {
 /*Mobile Header */
 
 .header {
-  padding: 30px 0;
+  padding: 30px 1em;
   display: flex;
   background: var(--darkle);
   z-index: 11;
